# dbot-learn

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yaml  lint.yaml
data/orders/: template.json
data/orders/routed/: 333fc561-0052-4f3d-b280-8eeb4a0e3ccf.json  9c9e697b-fa2d-4373-9b17-de09d553d7cd.json
data/robots/: template.json
data/robots/deployed/: crazy-dandelion.json  great-dolphin.json
deployment/: main.tf  scheduled_job.yaml
src/: dispatch.py  geoutils.py  monitor.py  navigate.py  order.py
tests/: test_dispatch.py  test_geoutils.py  test_navigate.py  test_order.py
tests/fixtures/: 2d3ae2dd-8648-4005-bccd-9d812bd55a80_routed.json  order.json  order_routed.json  robot_location.json
tests/fixtures/orders/initial/: 2d3ae2dd-8648-4005-bccd-9d812bd55a80.json  9f40a19f-ad96-40cb-a0e1-3d702e77b69f.json
tests/fixtures/robots/initial/: crazy-dandelion.json  great-dolphin.json
