[tool.poetry]
name = "delibot-sandbox"
version = "0.1.0"
description = ""
authors = ["Niccolo Dejito <ncdejito@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
streamlit = "^1.8.0"
click = "8.0.4"
haversine = "^2.5.1"
pika = "^1.2.0"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pytest = "^7.1.1"
scipy = "^1.8.0"
mypy = "^0.942"
pre-commit = "^2.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
